[tool.poetry]
name = "jax-actor-critic"
version = "0.1.0"
description = ""
authors = ["Theo Wolf <theo@carbonre.com>"]
readme = "README.md"
packages = [{include = "jax_actor_critic"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
matplotlib = "^3.8.2"
jax = "^0.4.24"
jupyter = "^1.0.0"
notebook = "^7.0.8"
seaborn = "^0.13.2"
bsuite = "^0.3.5"
flax = "^0.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
